added: start and end cells by ctrl / alt + click respectively added: mousedown and mouseover for adding wall cells

--- a/style.css
+++ b/style.css
@@ -16,3 +16,15 @@
 .cell {
     border: 1px solid black;
 }
+
+.wall {
+    background-color: #dddddd;
+}
+
+.start {
+    background-color: green;
+}
+
+.end {
+    background-color: red;
+}
