--- a/style.css
+++ b/style.css
@@ -4,11 +4,23 @@
     padding: 0;
 }
 
-.grid-container {
-    display: grid;
+.title {
+    text-align: center;
+    margin-top: 5vh;
+}
+
+.wrapper {
+    justify-content: center;
     width: 500px;
     height: 500px;
     margin: 0 auto;
+}
+
+.grid-container {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    margin: 1em 0;
     grid-template-columns: repeat(20, 1fr);
     grid-template-rows: repeat(20, 1fr);
 }
@@ -18,7 +30,11 @@
 }
 
 .wall {
-    background-color: #dddddd;
+    background-color: #444444;
+}
+
+.visited {
+    background-color: gray;
 }
 
 .start {
