--- a/style.css
+++ b/style.css
@@ -25,6 +25,16 @@
     grid-template-rows: repeat(20, 1fr);
 }
 
+.button-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+button {
+    height: 25px;
+    width: 50px;
+}
+
 .cell {
     border: 1px solid black;
 }
@@ -43,4 +53,8 @@
 
 .end {
     background-color: red;
+}
+
+.path {
+    background-color: cyan;;
 }
