--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 
+:root {
+    --grid-size: 20;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -21,8 +25,8 @@
     width: 100%;
     height: 100%;
     margin: 1em 0;
-    grid-template-columns: repeat(20, 1fr);
-    grid-template-rows: repeat(20, 1fr);
+    grid-template-columns: repeat(var(--grid-size, 20), 1fr);
+    grid-template-rows: repeat(var(--grid-size, 20), 1fr);
 }
 
 .button-wrapper {
